tests/fail/elaboration/non-exhaustive-patterns/match-duplicate.snap
stdout = ''
stderr = '''
error: non-exhaustive patterns in match expression
  ┌─ tests/fail/elaboration/non-exhaustive-patterns/match-duplicate.fathom:3:7
  │
3 │ match true {
  │       ^^^^ patterns not covered

warning: unreachable pattern
  ┌─ tests/fail/elaboration/non-exhaustive-patterns/match-duplicate.fathom:5:3
  │
5 │   true => 2
  │   ^^^^

'''
